# generalized-collatz

./: Cargo.toml  README.md
src/: collatz.rs  main.rs  parse.rs  write.rs
