[package]
name = "collatz_rust"
version = "0.2.0"
authors = ["DanielMorton <dacmorton@gmail.com>"]
description = "Code for testing an extention of the Collatz Conjecture"
repository = "https://github.com/DanielMorton/extended-collatz"
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    ".idea/*",
    "collatz_rust.iml",
    "cycles/*",
    "cycle100/*",
    "tables/*"
]

[dependencies]
anyhow = "1.0.100"
csv = "1.3.0"
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.20"
rayon = "1.11.0"
rug = "1.28.0"
serde = { version = "1.0.226", features = ["derive"] }
structopt = "0.3.26"

[dev-dependencies]
tempfile = "3.23.0"
